pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingMethodArgumentListDelimiter.pkl
res1 = "abc".substring(0, 1 + "def"
res2 = 42
